Change the gap between each item in the content container. Ensure each item is only 200 pixels wide. Also center the text for each item in the content container

--- a/foundations/flex/04-flex-information/styless.css
+++ b/foundations/flex/04-flex-information/styless.css
@@ -18,6 +18,17 @@ img {
 
 .flex-content {
     display: flex;
+    justify-content: center;
+    gap: 52px;
+}
+
+.item {
+    width: 200px;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
 }
 
 /* do not edit this footer */
